--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <img src="img/logo.png" alt="" class="nav__logo-image">
             </a>
           </figure>
-          <button class="hamburger hamburger--vortex menu__hamburger" type="button">
+          <button class="hamburger hamburger--vortex" type="button">
             <span class="hamburger-box">
               <span class="hamburger-inner"></span>
             </span>
